@@ -10,6 +10,7 @@ Alessandro Rubini <rubini@gnu.org>
 Alexander K. Hudek <alexhudek@home.com>
 Andrew Clausen <clausen@gnu.org>
 Bernhard Treutwein <Bernhard.Treutwein@Verwaltung.Uni-Muenchen.DE>
+Bodo Rueskamp <br@itchigo.com>.
 Bradford Hovinen <hovinen@redrose.net>
 Brian Brunswick <brian@skarpsey.demon.co.uk>
 Bryan Ford <baford@cs.utah.edu>
